tests/fixtures/invalid/bool_mod_none.py
# Cannot modulo Bool and None
x: bool = True % None
